--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
     "react": "17.0.2",
     "react-dom": "17.0.2",
     "react-icons": "^4.2.0",
-    "sass": "^1.41.0"
+    "sass": "^1.41.0",
+    "stripe": "^8.176.0",
+    "striped": "^1.0.0"
   },
   "devDependencies": {
     "@types/node": "^16.9.1",
